tests/neg/i7294-a.check
-- Error: tests/neg/i7294-a.scala:6:10 ---------------------------------------------------------------------------------
6 |  case x: T => x.g(10) // error // error
  |          ^
  |          Warning: result of implicit search for scala.reflect.TypeTest[Nothing, T] will change.
  |          Current result foo.i7294-a$package.f will be no longer eligible
  |            because it is not defined before the search position.
  |          Result with new rules: No Matching Implicit.
  |          To opt into the new rules, use the `avoidLoopingGivens` language import,
  |
  |          To fix the problem you could try one of the following:
  |            - rearrange definitions,
  |            - use an explicit argument.
  |
  |          where:    T is a type in given instance f with bounds <: foo.Foo
-- [E007] Type Mismatch Error: tests/neg/i7294-a.scala:6:15 ------------------------------------------------------------
6 |  case x: T => x.g(10) // error // error
  |               ^
  |               Found:    (x : Nothing)
  |               Required: ?{ g: ? }
  |               Note that implicit conversions were not tried because the result of an implicit conversion
  |               must be more specific than ?{ g: [applied to (10) returning T] }
  |
  | longer explanation available when compiling with `-explain`
